--- a/src/pruebas/proyecto/PanelPestanas.form
+++ b/src/pruebas/proyecto/PanelPestanas.form
@@ -320,7 +320,7 @@
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="20" y="490" width="-1" height="20"/>
+                  <AbsoluteConstraints x="30" y="400" width="-1" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -471,7 +471,7 @@
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel8">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Ten en cuenta que debes agregar la sucursal antes y seleccionar esa misma sucursal para verificar cuales estaciones estan cubiertas"/>
+                <Property name="text" type="java.lang.String" value="asd"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel9">
